Changing server.js to Index.Js

--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "portfolio_backend",
   "version": "1.0.0",
   "description": "Backend for portfolio",
-  "main": "server.js",
+  "main": "index.js",
   "engines": {
     "node": "18.x"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "build": "npm run build",
-    "dev": "nodemon server.js"
+    "dev": "nodemon index.js"
   },
   "author": "Salaudeen K.R",
   "license": "ISC",
