--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
   "dependencies": {
     "axios": "^1.5.0",
     "cloudinary": "^1.37.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-graphql": "^0.12.0",
+    "express-session": "^1.17.3",
     "googleapis": "^118.0.0",
     "graphql": "^15.8.0",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "netlify-lambda": "^2.0.15",
+    "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
     "serverless-http": "^3.1.1"
   }
