--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
     "cloudinary": "^1.37.3",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
@@ -25,11 +26,13 @@
     "express-session": "^1.17.3",
     "googleapis": "^118.0.0",
     "graphql": "^15.8.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.3",
     "multer": "^1.4.5-lts.1",
     "netlify-lambda": "^2.0.15",
     "nodemailer": "^6.9.6",
     "nodemon": "^3.0.1",
+    "otp-generator": "^4.0.1",
     "serverless-http": "^3.1.1"
   }
 }
