--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.37.3",
     "connect-mongodb-session": "^3.1.1",
     "cookie-parser": "^1.4.6",
@@ -26,6 +27,7 @@
     "express-session": "^1.17.3",
     "googleapis": "^118.0.0",
     "graphql": "^15.8.0",
+    "joi": "^17.11.0",
     "jsonc": "^2.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.8.3",
